@@ -1,6 +1,7 @@
 <pre>
 2007-XX-XX:
 	* version 0.5.2
+	* added a new :sidebar command
 	* added 'more' and standard more-prompt key mappings to control
 	  behaviour of the message list pager 
 	* added 'hlsearchstyle' option to allow for user CSS styling of the
